--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 7:18:10 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 7:18:53 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -201,7 +201,7 @@ E thru 16</td>
       <td class="greyout leftborder">Viktor Hovland E
 E thru 16</td>
       <td class="greyout">Jon Rahm(W) +2
-+2 thru 16</td>
++2 thru 17</td>
     </tr>
     <tr>
       <td class="bigbold">Walk 2</td>
@@ -277,7 +277,7 @@ E thru 16</td>
       <td>Patrick Cantlay -2
 -2 thru 17</td>
       <td>Matthew Fitzpatrick E
-E thru 15</td>
+E thru 16</td>
       <td class="greyout leftborder">Brooks Koepka +1
 +1 thru 15</td>
       <td class="greyout">Xander Schauffele +2
@@ -311,7 +311,7 @@ E thru 15</td>
       <td>Webb Simpson -1
 -1 (F)</td>
       <td class="greyout leftborder">Jon Rahm(W) +2
-+2 thru 16</td>
++2 thru 17</td>
       <td class="greyout">Xander Schauffele +2
 +2 thru 16</td>
     </tr>
@@ -377,7 +377,7 @@ E thru 15</td>
       <td class="greyout leftborder">Jordan Spieth +1
 +1 thru 16</td>
       <td class="greyout">Jon Rahm +2
-+2 thru 16</td>
++2 thru 17</td>
     </tr>
     <tr>
       <td class="bigbold">Lyle Rattray</td>
@@ -391,7 +391,7 @@ E thru 15</td>
       <td>Viktor Hovland E
 E thru 16</td>
       <td class="greyout leftborder">Jon Rahm +2
-+2 thru 16</td>
++2 thru 17</td>
       <td class="greyout">Sam Burns +3
 +3 (F)</td>
     </tr>
@@ -412,22 +412,6 @@ E thru 16</td>
 +4 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Roy Jeffrey B</td>
-      <td class="bigbold">-7</td>
-      <td>Scottie Scheffler(W) -3
--3 (F)</td>
-      <td>Patrick Cantlay -2
--2 thru 17</td>
-      <td>Corey Conners -2
--2 (F)</td>
-      <td>Rory McIlroy E
-E thru 15</td>
-      <td class="greyout leftborder">Robert MacIntyre +1
-+1 (F)</td>
-      <td class="greyout">Jon Rahm +2
-+2 thru 16</td>
-    </tr>
-    <tr>
       <td class="bigbold">Matt Wilson</td>
       <td class="bigbold">-6</td>
       <td>Scottie Scheffler(W) -3
@@ -439,9 +423,25 @@ E thru 15</td>
       <td>Jordan Spieth +1
 +1 thru 16</td>
       <td class="greyout leftborder">Jon Rahm +2
-+2 thru 16</td>
++2 thru 17</td>
       <td class="greyout">Xander Schauffele +2
 +2 thru 16</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Roy Jeffrey B</td>
+      <td class="bigbold">-6</td>
+      <td>Scottie Scheffler(W) -3
+-3 (F)</td>
+      <td>Patrick Cantlay -2
+-2 thru 17</td>
+      <td>Corey Conners -2
+-2 (F)</td>
+      <td>Robert MacIntyre +1
++1 (F)</td>
+      <td class="greyout leftborder">Rory McIlroy +1
++1 thru 16</td>
+      <td class="greyout">Jon Rahm +2
++2 thru 17</td>
     </tr>
     <tr>
       <td class="bigbold">The Resort</td>
@@ -457,7 +457,7 @@ E (F)</td>
       <td class="greyout leftborder">Shane Lowry +1
 +1 (F)</td>
       <td class="greyout">Jon Rahm +2
-+2 thru 16</td>
++2 thru 17</td>
     </tr>
     <tr>
       <td class="bigbold">Ron Harrington</td>
@@ -473,39 +473,7 @@ E (F)</td>
       <td class="greyout leftborder">Brooks Koepka +1
 +1 thru 15</td>
       <td class="greyout">Jon Rahm(W) +2
-+2 thru 16</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Santorini Sunsets</td>
-      <td class="bigbold">-5</td>
-      <td>Scottie Scheffler -3
--3 (F)</td>
-      <td>Patrick Cantlay -2
--2 thru 17</td>
-      <td>Viktor Hovland E
-E thru 16</td>
-      <td>Rory McIlroy E
-E thru 15</td>
-      <td class="greyout leftborder">Xander Schauffele +2
-+2 thru 16</td>
-      <td class="greyout">Justin Thomas(W) +4
-+4 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Lorette Hosegood</td>
-      <td class="bigbold">-5</td>
-      <td>Dustin Johnson -3
--3 thru 17</td>
-      <td>Patrick Cantlay -2
--2 thru 17</td>
-      <td>Rory McIlroy(W) E
-E thru 15</td>
-      <td>Viktor Hovland E
-E thru 16</td>
-      <td class="greyout leftborder">Jordan Spieth +1
-+1 thru 16</td>
-      <td class="greyout">Jon Rahm +2
-+2 thru 16</td>
++2 thru 17</td>
     </tr>
     <tr>
       <td class="bigbold">Don Shaw</td>
@@ -517,7 +485,7 @@ E thru 16</td>
       <td>Tiger Woods -1
 -1 (F)</td>
       <td>Jon Rahm(W) +2
-+2 thru 16</td>
++2 thru 17</td>
       <td class="greyout leftborder">Xander Schauffele +2
 +2 thru 16</td>
       <td class="greyout">Sam Burns +3
@@ -563,7 +531,7 @@ E (F)</td>
       <td>Will Zalatoris -2
 -2 thru 17</td>
       <td>Matthew Fitzpatrick E
-E thru 15</td>
+E thru 16</td>
       <td>Brooks Koepka +1
 +1 thru 15</td>
       <td class="greyout leftborder">Shane Lowry +1
@@ -588,20 +556,36 @@ E thru 16</td>
 +4 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Jack Fleck</td>
-      <td class="bigbold">-5</td>
-      <td>Cameron Smith -4
--4 (F)</td>
-      <td>Tiger Woods -1
--1 (F)</td>
-      <td>Rory McIlroy(W) E
-E thru 15</td>
-      <td>Hideki Matsuyama E
-E (F)</td>
+      <td class="bigbold">Santorini Sunsets</td>
+      <td class="bigbold">-4</td>
+      <td>Scottie Scheffler -3
+-3 (F)</td>
+      <td>Patrick Cantlay -2
+-2 thru 17</td>
+      <td>Viktor Hovland E
+E thru 16</td>
+      <td>Rory McIlroy +1
++1 thru 16</td>
       <td class="greyout leftborder">Xander Schauffele +2
 +2 thru 16</td>
-      <td class="greyout">Justin Thomas +4
+      <td class="greyout">Justin Thomas(W) +4
 +4 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Lorette Hosegood</td>
+      <td class="bigbold">-4</td>
+      <td>Dustin Johnson -3
+-3 thru 17</td>
+      <td>Patrick Cantlay -2
+-2 thru 17</td>
+      <td>Viktor Hovland E
+E thru 16</td>
+      <td>Rory McIlroy(W) +1
++1 thru 16</td>
+      <td class="greyout leftborder">Jordan Spieth +1
++1 thru 16</td>
+      <td class="greyout">Jon Rahm +2
++2 thru 17</td>
     </tr>
     <tr>
       <td class="bigbold">Barb Wellard</td>
@@ -613,27 +597,11 @@ E (F)</td>
       <td>Brooks Koepka +1
 +1 thru 15</td>
       <td>Jon Rahm(W) +2
-+2 thru 16</td>
++2 thru 17</td>
       <td class="greyout leftborder">Xander Schauffele +2
 +2 thru 16</td>
       <td class="greyout">Sam Burns +3
 +3 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Grace</td>
-      <td class="bigbold">-4</td>
-      <td>Corey Conners -2
--2 (F)</td>
-      <td>Will Zalatoris -2
--2 thru 17</td>
-      <td>Viktor Hovland E
-E thru 16</td>
-      <td>Rory McIlroy E
-E thru 15</td>
-      <td class="greyout leftborder">Collin Morikawa +1
-+1 thru 17</td>
-      <td class="greyout">Xander Schauffele(W) +2
-+2 thru 16</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Tummon</td>
@@ -649,7 +617,23 @@ E thru 16</td>
       <td class="greyout leftborder">Brooks Koepka +1
 +1 thru 15</td>
       <td class="greyout">Jon Rahm +2
++2 thru 17</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Jack Fleck</td>
+      <td class="bigbold">-4</td>
+      <td>Cameron Smith -4
+-4 (F)</td>
+      <td>Tiger Woods -1
+-1 (F)</td>
+      <td>Hideki Matsuyama E
+E (F)</td>
+      <td>Rory McIlroy(W) +1
++1 thru 16</td>
+      <td class="greyout leftborder">Xander Schauffele +2
 +2 thru 16</td>
+      <td class="greyout">Justin Thomas +4
++4 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Low Golf IQ</td>
@@ -679,7 +663,7 @@ E thru 16</td>
       <td>Collin Morikawa +1
 +1 thru 17</td>
       <td class="greyout leftborder">Jon Rahm +2
-+2 thru 16</td>
++2 thru 17</td>
       <td class="greyout">Xander Schauffele +2
 +2 thru 16</td>
     </tr>
@@ -700,51 +684,19 @@ E thru 16</td>
 +4 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Ez Game Ez Life</td>
-      <td class="bigbold">-3</td>
-      <td>Will Zalatoris -2
--2 thru 17</td>
-      <td>Tiger Woods(W) -1
--1 (F)</td>
-      <td>Viktor Hovland E
-E thru 16</td>
-      <td>Rory McIlroy E
-E thru 15</td>
-      <td class="greyout leftborder">Collin Morikawa +1
-+1 thru 17</td>
-      <td class="greyout">Justin Thomas +4
-+4 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Jabby</td>
+      <td class="bigbold">Grace</td>
       <td class="bigbold">-3</td>
       <td>Corey Conners -2
 -2 (F)</td>
       <td>Will Zalatoris -2
 -2 thru 17</td>
-      <td>Rory McIlroy E
-E thru 15</td>
-      <td>Brooks Koepka +1
-+1 thru 15</td>
-      <td class="greyout leftborder">Jon Rahm +2
-+2 thru 16</td>
-      <td class="greyout">Justin Thomas(W) +4
-+4 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Glitter Girl</td>
-      <td class="bigbold">-3</td>
-      <td>Cameron Smith -4
--4 (F)</td>
       <td>Viktor Hovland E
 E thru 16</td>
-      <td>Rory McIlroy E
-E thru 15</td>
-      <td>Jordan Spieth +1
+      <td>Rory McIlroy +1
 +1 thru 16</td>
-      <td class="greyout leftborder">Bubba Watson +1
-+1 (F)</td>
-      <td class="greyout">Jon Rahm(W) +2
+      <td class="greyout leftborder">Collin Morikawa +1
++1 thru 17</td>
+      <td class="greyout">Xander Schauffele(W) +2
 +2 thru 16</td>
     </tr>
     <tr>
@@ -755,7 +707,7 @@ E thru 15</td>
       <td>Tony Finau -1
 -1 (F)</td>
       <td>Matthew Fitzpatrick E
-E thru 15</td>
+E thru 16</td>
       <td>Shane Lowry +1
 +1 (F)</td>
       <td class="greyout leftborder">Jordan Spieth +1
@@ -791,25 +743,57 @@ E thru 15</td>
       <td>Brooks Koepka +1
 +1 thru 15</td>
       <td class="greyout leftborder">Jon Rahm +2
-+2 thru 16</td>
++2 thru 17</td>
       <td class="greyout">Sam Burns +3
 +3 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Fred Jamieson</td>
+      <td class="bigbold">Ez Game Ez Life</td>
       <td class="bigbold">-2</td>
-      <td>Scottie Scheffler -3
--3 (F)</td>
+      <td>Will Zalatoris -2
+-2 thru 17</td>
+      <td>Tiger Woods(W) -1
+-1 (F)</td>
       <td>Viktor Hovland E
 E thru 16</td>
-      <td>Rory McIlroy E
-E thru 15</td>
+      <td>Rory McIlroy +1
++1 thru 16</td>
+      <td class="greyout leftborder">Collin Morikawa +1
++1 thru 17</td>
+      <td class="greyout">Justin Thomas +4
++4 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Jabby</td>
+      <td class="bigbold">-2</td>
+      <td>Corey Conners -2
+-2 (F)</td>
+      <td>Will Zalatoris -2
+-2 thru 17</td>
       <td>Brooks Koepka +1
 +1 thru 15</td>
-      <td class="greyout leftborder">Jon Rahm(W) +2
-+2 thru 16</td>
-      <td class="greyout">Xander Schauffele +2
-+2 thru 16</td>
+      <td>Rory McIlroy +1
++1 thru 16</td>
+      <td class="greyout leftborder">Jon Rahm +2
++2 thru 17</td>
+      <td class="greyout">Justin Thomas(W) +4
++4 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Glitter Girl</td>
+      <td class="bigbold">-2</td>
+      <td>Cameron Smith -4
+-4 (F)</td>
+      <td>Viktor Hovland E
+E thru 16</td>
+      <td>Rory McIlroy +1
++1 thru 16</td>
+      <td>Jordan Spieth +1
++1 thru 16</td>
+      <td class="greyout leftborder">Bubba Watson +1
++1 (F)</td>
+      <td class="greyout">Jon Rahm(W) +2
++2 thru 17</td>
     </tr>
     <tr>
       <td class="bigbold">Wylie</td>
@@ -837,7 +821,7 @@ E thru 15</td>
       <td>Viktor Hovland E
 E thru 16</td>
       <td>Jon Rahm +2
-+2 thru 16</td>
++2 thru 17</td>
       <td class="greyout leftborder">Xander Schauffele +2
 +2 thru 16</td>
       <td class="greyout">Justin Thomas(W) +4
@@ -857,7 +841,7 @@ E thru 16</td>
       <td class="greyout leftborder">Jordan Spieth +1
 +1 thru 16</td>
       <td class="greyout">Jon Rahm +2
-+2 thru 16</td>
++2 thru 17</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Bryson</td>
@@ -871,7 +855,23 @@ E thru 16</td>
       <td>Jordan Spieth +1
 +1 thru 16</td>
       <td class="greyout leftborder">Jon Rahm(W) +2
++2 thru 17</td>
+      <td class="greyout">Xander Schauffele +2
 +2 thru 16</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Fred Jamieson</td>
+      <td class="bigbold">-1</td>
+      <td>Scottie Scheffler -3
+-3 (F)</td>
+      <td>Viktor Hovland E
+E thru 16</td>
+      <td>Brooks Koepka +1
++1 thru 15</td>
+      <td>Rory McIlroy +1
++1 thru 16</td>
+      <td class="greyout leftborder">Jon Rahm(W) +2
++2 thru 17</td>
       <td class="greyout">Xander Schauffele +2
 +2 thru 16</td>
     </tr>
@@ -889,7 +889,7 @@ E thru 16</td>
       <td class="greyout leftborder">Jordan Spieth +1
 +1 thru 16</td>
       <td class="greyout">Jon Rahm(W) +2
-+2 thru 16</td>
++2 thru 17</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Hosegood</td>
@@ -903,7 +903,7 @@ E (F)</td>
       <td>Jordan Spieth +1
 +1 thru 16</td>
       <td class="greyout leftborder">Jon Rahm +2
-+2 thru 16</td>
++2 thru 17</td>
       <td class="greyout">Paul Casey
 Out With Injury</td>
     </tr>
@@ -919,23 +919,7 @@ E (F)</td>
       <td>Jordan Spieth +1
 +1 thru 16</td>
       <td class="greyout leftborder">Jon Rahm(W) +2
-+2 thru 16</td>
-      <td class="greyout">Justin Thomas +4
-+4 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Downhill Down Wind</td>
-      <td class="bigbold">0</td>
-      <td>Tiger Woods -1
--1 (F)</td>
-      <td>Viktor Hovland E
-E thru 16</td>
-      <td>Rory McIlroy E
-E thru 15</td>
-      <td>Collin Morikawa(W) +1
-+1 thru 17</td>
-      <td class="greyout leftborder">Gary Woodland +3
-+3 (F)</td>
++2 thru 17</td>
       <td class="greyout">Justin Thomas +4
 +4 (F)</td>
     </tr>
@@ -951,7 +935,7 @@ E thru 16</td>
       <td>Jordan Spieth +1
 +1 thru 16</td>
       <td class="greyout leftborder">Jon Rahm(W) +2
-+2 thru 16</td>
++2 thru 17</td>
       <td class="greyout">Justin Thomas +4
 +4 (F)</td>
     </tr>
@@ -965,7 +949,7 @@ E thru 16</td>
       <td>Jordan Spieth +1
 +1 thru 16</td>
       <td>Jon Rahm +2
-+2 thru 16</td>
++2 thru 17</td>
       <td class="greyout leftborder">Sam Burns +3
 +3 (F)</td>
       <td class="greyout">Justin Thomas(W) +4
@@ -988,16 +972,32 @@ E thru 16</td>
 +4 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Brian McDonald</td>
+      <td class="bigbold">Downhill Down Wind</td>
       <td class="bigbold">1</td>
+      <td>Tiger Woods -1
+-1 (F)</td>
+      <td>Viktor Hovland E
+E thru 16</td>
+      <td>Collin Morikawa(W) +1
++1 thru 17</td>
+      <td>Rory McIlroy +1
++1 thru 16</td>
+      <td class="greyout leftborder">Gary Woodland +3
++3 (F)</td>
+      <td class="greyout">Justin Thomas +4
++4 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Brian McDonald</td>
+      <td class="bigbold">2</td>
       <td>Corey Conners -2
 -2 (F)</td>
-      <td>Rory McIlroy E
-E thru 15</td>
+      <td>Rory McIlroy +1
++1 thru 16</td>
       <td>Jordan Spieth +1
 +1 thru 16</td>
       <td>Jon Rahm(W) +2
-+2 thru 16</td>
++2 thru 17</td>
       <td class="greyout leftborder">Xander Schauffele +2
 +2 thru 16</td>
       <td class="greyout">Justin Thomas +4
@@ -1005,15 +1005,15 @@ E thru 15</td>
     </tr>
     <tr>
       <td class="bigbold">Hasbulla</td>
-      <td class="bigbold">1</td>
+      <td class="bigbold">2</td>
       <td>Patrick Cantlay(W) -2
 -2 thru 17</td>
-      <td>Rory McIlroy E
-E thru 15</td>
       <td>Brooks Koepka +1
 +1 thru 15</td>
+      <td>Rory McIlroy +1
++1 thru 16</td>
       <td>Jon Rahm +2
-+2 thru 16</td>
++2 thru 17</td>
       <td class="greyout leftborder">Xander Schauffele +2
 +2 thru 16</td>
       <td class="greyout">Justin Thomas +4
@@ -1021,11 +1021,11 @@ E thru 15</td>
     </tr>
     <tr>
       <td class="bigbold">Benjac</td>
-      <td class="bigbold">1</td>
+      <td class="bigbold">2</td>
       <td>Cameron Smith -4
 -4 (F)</td>
-      <td>Rory McIlroy E
-E thru 15</td>
+      <td>Rory McIlroy +1
++1 thru 16</td>
       <td>Xander Schauffele +2
 +2 thru 16</td>
       <td>Sam Burns +3
@@ -1047,7 +1047,7 @@ E thru 16</td>
       <td>Jordan Spieth +1
 +1 thru 16</td>
       <td class="greyout leftborder">Jon Rahm +2
-+2 thru 16</td>
++2 thru 17</td>
       <td class="greyout">Patrick Reed +2
 +2 (F)</td>
     </tr>
@@ -1061,7 +1061,7 @@ E thru 16</td>
       <td>Jordan Spieth +1
 +1 thru 16</td>
       <td>Jon Rahm +2
-+2 thru 16</td>
++2 thru 17</td>
       <td class="greyout leftborder">Xander Schauffele +2
 +2 thru 16</td>
       <td class="greyout">Justin Thomas(W) +4
@@ -1075,7 +1075,7 @@ E thru 16</td>
       <td>Brooks Koepka +1
 +1 thru 15</td>
       <td>Jon Rahm(W) +2
-+2 thru 16</td>
++2 thru 17</td>
       <td>Xander Schauffele +2
 +2 thru 16</td>
       <td class="greyout leftborder">Louis Oosthuizen +4
@@ -1091,7 +1091,7 @@ E thru 16</td>
       <td>Jordan Spieth +1
 +1 thru 16</td>
       <td>Jon Rahm +2
-+2 thru 16</td>
++2 thru 17</td>
       <td>Xander Schauffele +2
 +2 thru 16</td>
       <td class="greyout leftborder">Justin Thomas(W) +4
