--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 7:18:10 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 7:18:53 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -172,22 +172,6 @@ body {
 +4 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Paxton Watson</td>
-      <td class="bigbold">-7</td>
-      <td>Cameron Smith -4
--4 (F)</td>
-      <td>Joaquin Niemann -3
--3 (F)</td>
-      <td>Viktor Hovland E
-E thru 16</td>
-      <td>Rory McIlroy E
-E thru 15</td>
-      <td class="greyout leftborder">Tommy Fleetwood(W) +3
-+3 (F)</td>
-      <td class="greyout">Justin Thomas +4
-+4 (F)</td>
-    </tr>
-    <tr>
       <td class="bigbold">Scott Williamson</td>
       <td class="bigbold">-6</td>
       <td>Sungjae Im -5
@@ -204,20 +188,20 @@ E thru 16</td>
 +4 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">John Nixon</td>
-      <td class="bigbold">-5</td>
-      <td>Cameron Smith(W) -4
+      <td class="bigbold">Paxton Watson</td>
+      <td class="bigbold">-6</td>
+      <td>Cameron Smith -4
 -4 (F)</td>
-      <td>Patrick Cantlay -2
--2 thru 17</td>
-      <td>Rory McIlroy E
-E thru 15</td>
-      <td>Collin Morikawa +1
-+1 thru 17</td>
-      <td class="greyout leftborder">Brooks Koepka +1
-+1 thru 15</td>
-      <td class="greyout">Xander Schauffele +2
-+2 thru 16</td>
+      <td>Joaquin Niemann -3
+-3 (F)</td>
+      <td>Viktor Hovland E
+E thru 16</td>
+      <td>Rory McIlroy +1
++1 thru 16</td>
+      <td class="greyout leftborder">Tommy Fleetwood(W) +3
++3 (F)</td>
+      <td class="greyout">Justin Thomas +4
++4 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Andrew Winchester</td>
@@ -227,7 +211,7 @@ E thru 15</td>
       <td>Will Zalatoris -2
 -2 thru 17</td>
       <td>Matthew Fitzpatrick E
-E thru 15</td>
+E thru 16</td>
       <td>Brooks Koepka +1
 +1 thru 15</td>
       <td class="greyout leftborder">Shane Lowry +1
@@ -252,6 +236,22 @@ E thru 16</td>
 +4 (F)</td>
     </tr>
     <tr>
+      <td class="bigbold">John Nixon</td>
+      <td class="bigbold">-4</td>
+      <td>Cameron Smith(W) -4
+-4 (F)</td>
+      <td>Patrick Cantlay -2
+-2 thru 17</td>
+      <td>Collin Morikawa +1
++1 thru 17</td>
+      <td>Brooks Koepka +1
++1 thru 15</td>
+      <td class="greyout leftborder">Rory McIlroy +1
++1 thru 16</td>
+      <td class="greyout">Xander Schauffele +2
++2 thru 16</td>
+    </tr>
+    <tr>
       <td class="bigbold">Matt Tummon</td>
       <td class="bigbold">-4</td>
       <td>Dustin Johnson -3
@@ -265,7 +265,7 @@ E thru 16</td>
       <td class="greyout leftborder">Brooks Koepka +1
 +1 thru 15</td>
       <td class="greyout">Jon Rahm +2
-+2 thru 16</td>
++2 thru 17</td>
     </tr>
     <tr>
       <td class="bigbold">Derrick Shea</td>
@@ -279,7 +279,7 @@ E (F)</td>
       <td>Shane Lowry +1
 +1 (F)</td>
       <td class="greyout leftborder">Jon Rahm +2
-+2 thru 16</td>
++2 thru 17</td>
       <td class="greyout">Justin Thomas(W) +4
 +4 (F)</td>
     </tr>
@@ -297,7 +297,7 @@ E (F)</td>
       <td class="greyout leftborder">Shane Lowry +1
 +1 (F)</td>
       <td class="greyout">Jon Rahm +2
-+2 thru 16</td>
++2 thru 17</td>
     </tr>
     <tr>
       <td class="bigbold">Al Shulman</td>
@@ -345,7 +345,7 @@ E (F)</td>
       <td class="greyout leftborder">Brooks Koepka +1
 +1 thru 15</td>
       <td class="greyout">Jon Rahm(W) +2
-+2 thru 16</td>
++2 thru 17</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Sinclair</td>
@@ -361,7 +361,7 @@ E (F)</td>
       <td class="greyout leftborder">Robert MacIntyre +1
 +1 (F)</td>
       <td class="greyout">Jon Rahm +2
-+2 thru 16</td>
++2 thru 17</td>
     </tr>
     <tr>
       <td class="bigbold">Adam Ryan</td>
@@ -371,7 +371,7 @@ E (F)</td>
       <td>Jordan Spieth +1
 +1 thru 16</td>
       <td>Jon Rahm +2
-+2 thru 16</td>
++2 thru 17</td>
       <td>Xander Schauffele +2
 +2 thru 16</td>
       <td class="greyout leftborder">Justin Thomas(W) +4
@@ -389,7 +389,7 @@ E thru 16</td>
       <td>Brooks Koepka +1
 +1 thru 15</td>
       <td>Jon Rahm +2
-+2 thru 16</td>
++2 thru 17</td>
       <td class="greyout leftborder">Patrick Reed +2
 +2 (F)</td>
       <td class="greyout">Luke List +5
