--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 7:37:31 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 7:38:14 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -182,8 +182,8 @@ body {
 E thru 17</td>
       <td>Collin Morikawa +1
 +1 (F)</td>
-      <td class="greyout leftborder">Brooks Koepka +1
-+1 thru 16</td>
+      <td class="greyout leftborder">Brooks Koepka +2
++2 thru 17</td>
       <td class="greyout">Justin Thomas +4
 +4 (F)</td>
     </tr>
@@ -228,10 +228,10 @@ E thru 17</td>
 -2 (F)</td>
       <td>Collin Morikawa +1
 +1 (F)</td>
-      <td>Brooks Koepka +1
-+1 thru 16</td>
-      <td class="greyout leftborder">Rory McIlroy +1
+      <td>Rory McIlroy +1
 +1 thru 17</td>
+      <td class="greyout leftborder">Brooks Koepka +2
++2 thru 17</td>
       <td class="greyout">Xander Schauffele +2
 +2 thru 17</td>
     </tr>
@@ -244,10 +244,10 @@ E thru 17</td>
 -1 (F)</td>
       <td>Matthew Fitzpatrick E
 E thru 17</td>
-      <td>Brooks Koepka +1
-+1 thru 16</td>
-      <td class="greyout leftborder">Shane Lowry +1
+      <td>Shane Lowry +1
 +1 (F)</td>
+      <td class="greyout leftborder">Brooks Koepka +2
++2 thru 17</td>
       <td class="greyout">Justin Thomas(W) +4
 +4 (F)</td>
     </tr>
@@ -262,8 +262,8 @@ E thru 17</td>
 E thru 17</td>
       <td>Jordan Spieth(W) +1
 +1 thru 17</td>
-      <td class="greyout leftborder">Brooks Koepka +1
-+1 thru 16</td>
+      <td class="greyout leftborder">Brooks Koepka +2
++2 thru 17</td>
       <td class="greyout">Jon Rahm +2
 +2 (F)</td>
     </tr>
@@ -306,14 +306,14 @@ E (F)</td>
 -3 (F)</td>
       <td>Will Zalatoris -1
 -1 (F)</td>
-      <td>Brooks Koepka +1
-+1 thru 16</td>
       <td>Jordan Spieth +1
 +1 thru 17</td>
-      <td class="greyout leftborder">Shane Lowry +1
+      <td>Shane Lowry +1
 +1 (F)</td>
-      <td class="greyout">Jon Rahm +2
+      <td class="greyout leftborder">Jon Rahm +2
 +2 (F)</td>
+      <td class="greyout">Brooks Koepka +2
++2 thru 17</td>
     </tr>
     <tr>
       <td class="bigbold">Al Shulman</td>
@@ -326,8 +326,8 @@ E (F)</td>
 -1 (F)</td>
       <td>Collin Morikawa +1
 +1 (F)</td>
-      <td class="greyout leftborder">Brooks Koepka +1
-+1 thru 16</td>
+      <td class="greyout leftborder">Brooks Koepka +2
++2 thru 17</td>
       <td class="greyout">Justin Thomas(W) +4
 +4 (F)</td>
     </tr>
@@ -342,10 +342,10 @@ E (F)</td>
 +1 (F)</td>
       <td>Jordan Spieth +1
 +1 thru 17</td>
-      <td class="greyout leftborder">Brooks Koepka +1
-+1 thru 16</td>
-      <td class="greyout">Jon Rahm(W) +2
+      <td class="greyout leftborder">Jon Rahm(W) +2
 +2 (F)</td>
+      <td class="greyout">Brooks Koepka +2
++2 thru 17</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Sinclair</td>
@@ -381,15 +381,15 @@ E (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Jeff Turnham</td>
-      <td class="bigbold">4</td>
+      <td class="bigbold">5</td>
       <td>Viktor Hovland(W) E
 E thru 17</td>
       <td>Collin Morikawa +1
 +1 (F)</td>
-      <td>Brooks Koepka +1
-+1 thru 16</td>
       <td>Jon Rahm +2
 +2 (F)</td>
+      <td>Brooks Koepka +2
++2 thru 17</td>
       <td class="greyout leftborder">Patrick Reed +2
 +2 (F)</td>
       <td class="greyout">Luke List +5
