--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 7:46:08 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 7:46:51 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -278,9 +278,9 @@ E thru 17</td>
 -1 (F)</td>
       <td>Hideki Matsuyama E
 E (F)</td>
-      <td class="greyout leftborder">Jordan Spieth +1
-+1 thru 17</td>
-      <td class="greyout">Xander Schauffele +2
+      <td class="greyout leftborder">Xander Schauffele +2
++2 (F)</td>
+      <td class="greyout">Jordan Spieth +2
 +2 (F)</td>
     </tr>
     <tr>
@@ -380,22 +380,6 @@ E (F)</td>
 +2 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Santorini Sunrises</td>
-      <td class="bigbold">-6</td>
-      <td>Cameron Smith -4
--4 (F)</td>
-      <td>Corey Conners(W) -2
--2 (F)</td>
-      <td>Will Zalatoris -1
--1 (F)</td>
-      <td>Jordan Spieth +1
-+1 thru 17</td>
-      <td class="greyout leftborder">Brooks Koepka +2
-+2 thru 17</td>
-      <td class="greyout">Jon Rahm +2
-+2 (F)</td>
-    </tr>
-    <tr>
       <td class="bigbold">Roy Jeffrey B</td>
       <td class="bigbold">-6</td>
       <td>Scottie Scheffler(W) -3
@@ -460,36 +444,20 @@ E (F)</td>
 +3 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Matt Wilson</td>
+      <td class="bigbold">Santorini Sunrises</td>
       <td class="bigbold">-5</td>
-      <td>Scottie Scheffler(W) -3
--3 (F)</td>
-      <td>Corey Conners -2
+      <td>Cameron Smith -4
+-4 (F)</td>
+      <td>Corey Conners(W) -2
 -2 (F)</td>
       <td>Will Zalatoris -1
 -1 (F)</td>
-      <td>Jordan Spieth +1
-+1 thru 17</td>
+      <td>Brooks Koepka +2
++2 thru 17</td>
       <td class="greyout leftborder">Jon Rahm +2
 +2 (F)</td>
-      <td class="greyout">Xander Schauffele +2
+      <td class="greyout">Jordan Spieth +2
 +2 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Neil Hardy</td>
-      <td class="bigbold">-5</td>
-      <td>Cameron Smith(W) -4
--4 (F)</td>
-      <td>Corey Conners -2
--2 (F)</td>
-      <td>Viktor Hovland E
-E (F)</td>
-      <td>Jordan Spieth +1
-+1 thru 17</td>
-      <td class="greyout leftborder">Xander Schauffele +2
-+2 (F)</td>
-      <td class="greyout">Justin Thomas +4
-+4 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">New Lu</td>
@@ -566,10 +534,42 @@ E (F)</td>
 E (F)</td>
       <td>Rory McIlroy(W) +1
 +1 thru 17</td>
-      <td class="greyout leftborder">Jordan Spieth +1
-+1 thru 17</td>
-      <td class="greyout">Jon Rahm +2
+      <td class="greyout leftborder">Jon Rahm +2
 +2 (F)</td>
+      <td class="greyout">Jordan Spieth +2
++2 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Matt Wilson</td>
+      <td class="bigbold">-4</td>
+      <td>Scottie Scheffler(W) -3
+-3 (F)</td>
+      <td>Corey Conners -2
+-2 (F)</td>
+      <td>Will Zalatoris -1
+-1 (F)</td>
+      <td>Jon Rahm +2
++2 (F)</td>
+      <td class="greyout leftborder">Xander Schauffele +2
++2 (F)</td>
+      <td class="greyout">Jordan Spieth +2
++2 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Neil Hardy</td>
+      <td class="bigbold">-4</td>
+      <td>Cameron Smith(W) -4
+-4 (F)</td>
+      <td>Corey Conners -2
+-2 (F)</td>
+      <td>Viktor Hovland E
+E (F)</td>
+      <td>Xander Schauffele +2
++2 (F)</td>
+      <td class="greyout leftborder">Jordan Spieth +2
++2 (F)</td>
+      <td class="greyout">Justin Thomas +4
++4 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Andrew Winchester</td>
@@ -586,22 +586,6 @@ E thru 17</td>
 +2 thru 17</td>
       <td class="greyout">Justin Thomas(W) +4
 +4 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Matt Tummon</td>
-      <td class="bigbold">-4</td>
-      <td>Dustin Johnson -3
--3 (F)</td>
-      <td>Patrick Cantlay -2
--2 (F)</td>
-      <td>Viktor Hovland E
-E (F)</td>
-      <td>Jordan Spieth(W) +1
-+1 thru 17</td>
-      <td class="greyout leftborder">Brooks Koepka +2
-+2 thru 17</td>
-      <td class="greyout">Jon Rahm +2
-+2 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Jack Fleck</td>
@@ -662,26 +646,26 @@ E (F)</td>
 E thru 17</td>
       <td>Shane Lowry +1
 +1 (F)</td>
-      <td class="greyout leftborder">Jordan Spieth +1
-+1 thru 17</td>
+      <td class="greyout leftborder">Jordan Spieth +2
++2 (F)</td>
       <td class="greyout">Louis Oosthuizen +4
 +4 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Stan and Ollie Garch</td>
+      <td class="bigbold">Matt Tummon</td>
       <td class="bigbold">-3</td>
-      <td>Scottie Scheffler -3
+      <td>Dustin Johnson -3
 -3 (F)</td>
-      <td>Corey Conners -2
+      <td>Patrick Cantlay -2
 -2 (F)</td>
-      <td>Shane Lowry +1
-+1 (F)</td>
-      <td>Jordan Spieth +1
-+1 thru 17</td>
+      <td>Viktor Hovland E
+E (F)</td>
+      <td>Jordan Spieth(W) +2
++2 (F)</td>
       <td class="greyout leftborder">Brooks Koepka +2
 +2 thru 17</td>
-      <td class="greyout">Justin Thomas(W) +4
-+4 (F)</td>
+      <td class="greyout">Jon Rahm +2
++2 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Walk 1</td>
@@ -698,22 +682,6 @@ E (F)</td>
 +2 (F)</td>
       <td class="greyout">Xander Schauffele +2
 +2 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Philip Dale</td>
-      <td class="bigbold">-2</td>
-      <td>Scottie Scheffler -3
--3 (F)</td>
-      <td>Patrick Cantlay -2
--2 (F)</td>
-      <td>Jordan Spieth +1
-+1 thru 17</td>
-      <td>Brooks Koepka +2
-+2 thru 17</td>
-      <td class="greyout leftborder">Xander Schauffele +2
-+2 (F)</td>
-      <td class="greyout">Justin Thomas(W) +4
-+4 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Grace</td>
@@ -740,28 +708,28 @@ E (F)</td>
 E (F)</td>
       <td>Rory McIlroy +1
 +1 thru 17</td>
-      <td>Jordan Spieth +1
-+1 thru 17</td>
-      <td class="greyout leftborder">Bubba Watson +1
+      <td>Bubba Watson +1
 +1 (F)</td>
-      <td class="greyout">Jon Rahm(W) +2
+      <td class="greyout leftborder">Jon Rahm(W) +2
++2 (F)</td>
+      <td class="greyout">Jordan Spieth +2
 +2 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Neville Spillman</td>
+      <td class="bigbold">Stan and Ollie Garch</td>
       <td class="bigbold">-2</td>
       <td>Scottie Scheffler -3
 -3 (F)</td>
-      <td>Patrick Cantlay -2
+      <td>Corey Conners -2
 -2 (F)</td>
-      <td>Jordan Spieth(W) +1
-+1 thru 17</td>
+      <td>Shane Lowry +1
++1 (F)</td>
       <td>Brooks Koepka +2
 +2 thru 17</td>
-      <td class="greyout leftborder">Jon Rahm +2
+      <td class="greyout leftborder">Jordan Spieth +2
 +2 (F)</td>
-      <td class="greyout">Sam Burns +3
-+3 (F)</td>
+      <td class="greyout">Justin Thomas(W) +4
++4 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Al Shulman</td>
@@ -780,6 +748,22 @@ E (F)</td>
 +4 (F)</td>
     </tr>
     <tr>
+      <td class="bigbold">Philip Dale</td>
+      <td class="bigbold">-1</td>
+      <td>Scottie Scheffler -3
+-3 (F)</td>
+      <td>Patrick Cantlay -2
+-2 (F)</td>
+      <td>Brooks Koepka +2
++2 thru 17</td>
+      <td>Xander Schauffele +2
++2 (F)</td>
+      <td class="greyout leftborder">Jordan Spieth +2
++2 (F)</td>
+      <td class="greyout">Justin Thomas(W) +4
++4 (F)</td>
+    </tr>
+    <tr>
       <td class="bigbold">Chris Sinclair</td>
       <td class="bigbold">-1</td>
       <td>Corey Conners(W) -2
@@ -790,9 +774,9 @@ E (F)</td>
 +1 (F)</td>
       <td>Collin Morikawa +1
 +1 (F)</td>
-      <td class="greyout leftborder">Jordan Spieth +1
-+1 thru 17</td>
-      <td class="greyout">Jon Rahm +2
+      <td class="greyout leftborder">Jon Rahm +2
++2 (F)</td>
+      <td class="greyout">Jordan Spieth +2
 +2 (F)</td>
     </tr>
     <tr>
@@ -812,52 +796,20 @@ E (F)</td>
 +4 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Shane Tummon</td>
+      <td class="bigbold">Neville Spillman</td>
       <td class="bigbold">-1</td>
-      <td>Patrick Cantlay -2
--2 (F)</td>
-      <td>Tony Finau -1
--1 (F)</td>
-      <td>Collin Morikawa +1
-+1 (F)</td>
-      <td>Jordan Spieth +1
-+1 thru 17</td>
-      <td class="greyout leftborder">Jon Rahm(W) +2
-+2 (F)</td>
-      <td class="greyout">Brooks Koepka +2
-+2 thru 17</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Shane Hosegood</td>
-      <td class="bigbold">0</td>
-      <td>Patrick Cantlay -2
--2 (F)</td>
-      <td>Hideki Matsuyama E
-E (F)</td>
-      <td>Collin Morikawa(W) +1
-+1 (F)</td>
-      <td>Jordan Spieth +1
-+1 thru 17</td>
-      <td class="greyout leftborder">Jon Rahm +2
-+2 (F)</td>
-      <td class="greyout">Paul Casey
-Out With Injury</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Chris Bryson</td>
-      <td class="bigbold">0</td>
       <td>Scottie Scheffler -3
 -3 (F)</td>
-      <td>Viktor Hovland E
-E (F)</td>
-      <td>Jordan Spieth +1
-+1 thru 17</td>
-      <td>Jon Rahm(W) +2
+      <td>Patrick Cantlay -2
+-2 (F)</td>
+      <td>Jordan Spieth(W) +2
 +2 (F)</td>
-      <td class="greyout leftborder">Brooks Koepka +2
+      <td>Brooks Koepka +2
 +2 thru 17</td>
-      <td class="greyout">Xander Schauffele +2
+      <td class="greyout leftborder">Jon Rahm +2
 +2 (F)</td>
+      <td class="greyout">Sam Burns +3
++3 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Jabby</td>
@@ -908,20 +860,52 @@ E (F)</td>
 +4 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Roy Jeffrey A</td>
+      <td class="bigbold">Shane Tummon</td>
+      <td class="bigbold">0</td>
+      <td>Patrick Cantlay -2
+-2 (F)</td>
+      <td>Tony Finau -1
+-1 (F)</td>
+      <td>Collin Morikawa +1
++1 (F)</td>
+      <td>Jon Rahm(W) +2
++2 (F)</td>
+      <td class="greyout leftborder">Brooks Koepka +2
++2 thru 17</td>
+      <td class="greyout">Jordan Spieth +2
++2 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Shane Hosegood</td>
       <td class="bigbold">1</td>
       <td>Patrick Cantlay -2
 -2 (F)</td>
       <td>Hideki Matsuyama E
 E (F)</td>
-      <td>Jordan Spieth +1
-+1 thru 17</td>
+      <td>Collin Morikawa(W) +1
++1 (F)</td>
+      <td>Jon Rahm +2
++2 (F)</td>
+      <td class="greyout leftborder">Jordan Spieth +2
++2 (F)</td>
+      <td class="greyout">Paul Casey
+Out With Injury</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Chris Bryson</td>
+      <td class="bigbold">1</td>
+      <td>Scottie Scheffler -3
+-3 (F)</td>
+      <td>Viktor Hovland E
+E (F)</td>
       <td>Jon Rahm(W) +2
 +2 (F)</td>
-      <td class="greyout leftborder">Brooks Koepka +2
+      <td>Brooks Koepka +2
 +2 thru 17</td>
-      <td class="greyout">Justin Thomas +4
-+4 (F)</td>
+      <td class="greyout leftborder">Xander Schauffele +2
++2 (F)</td>
+      <td class="greyout">Jordan Spieth +2
++2 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Downhill Down Wind</td>
@@ -940,66 +924,18 @@ E (F)</td>
 +4 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Glen Wilson</td>
-      <td class="bigbold">2</td>
-      <td>Will Zalatoris -1
--1 (F)</td>
-      <td>Viktor Hovland E
-E (F)</td>
-      <td>Jordan Spieth +1
-+1 thru 17</td>
-      <td>Jon Rahm +2
-+2 (F)</td>
-      <td class="greyout leftborder">Sam Burns +3
-+3 (F)</td>
-      <td class="greyout">Justin Thomas(W) +4
-+4 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">NewCastle Magpies</td>
+      <td class="bigbold">Roy Jeffrey A</td>
       <td class="bigbold">2</td>
       <td>Patrick Cantlay -2
 -2 (F)</td>
-      <td>Collin Morikawa +1
-+1 (F)</td>
-      <td>Jordan Spieth +1
-+1 thru 17</td>
+      <td>Hideki Matsuyama E
+E (F)</td>
+      <td>Jon Rahm(W) +2
++2 (F)</td>
       <td>Brooks Koepka +2
 +2 thru 17</td>
-      <td class="greyout leftborder">Xander Schauffele +2
+      <td class="greyout leftborder">Jordan Spieth +2
 +2 (F)</td>
-      <td class="greyout">Justin Thomas(W) +4
-+4 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Brian McDonald</td>
-      <td class="bigbold">2</td>
-      <td>Corey Conners -2
--2 (F)</td>
-      <td>Rory McIlroy +1
-+1 thru 17</td>
-      <td>Jordan Spieth +1
-+1 thru 17</td>
-      <td>Jon Rahm(W) +2
-+2 (F)</td>
-      <td class="greyout leftborder">Xander Schauffele +2
-+2 (F)</td>
-      <td class="greyout">Justin Thomas +4
-+4 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Kash Ahmad</td>
-      <td class="bigbold">2</td>
-      <td>Will Zalatoris -1
--1 (F)</td>
-      <td>Viktor Hovland E
-E (F)</td>
-      <td>Jordan Spieth +1
-+1 thru 17</td>
-      <td>Jon Rahm(W) +2
-+2 (F)</td>
-      <td class="greyout leftborder">Brooks Koepka +2
-+2 thru 17</td>
       <td class="greyout">Justin Thomas +4
 +4 (F)</td>
     </tr>
@@ -1020,6 +956,70 @@ E (F)</td>
 +4 (F)</td>
     </tr>
     <tr>
+      <td class="bigbold">Glen Wilson</td>
+      <td class="bigbold">3</td>
+      <td>Will Zalatoris -1
+-1 (F)</td>
+      <td>Viktor Hovland E
+E (F)</td>
+      <td>Jon Rahm +2
++2 (F)</td>
+      <td>Jordan Spieth +2
++2 (F)</td>
+      <td class="greyout leftborder">Sam Burns +3
++3 (F)</td>
+      <td class="greyout">Justin Thomas(W) +4
++4 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">NewCastle Magpies</td>
+      <td class="bigbold">3</td>
+      <td>Patrick Cantlay -2
+-2 (F)</td>
+      <td>Collin Morikawa +1
++1 (F)</td>
+      <td>Brooks Koepka +2
++2 thru 17</td>
+      <td>Xander Schauffele +2
++2 (F)</td>
+      <td class="greyout leftborder">Jordan Spieth +2
++2 (F)</td>
+      <td class="greyout">Justin Thomas(W) +4
++4 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Brian McDonald</td>
+      <td class="bigbold">3</td>
+      <td>Corey Conners -2
+-2 (F)</td>
+      <td>Rory McIlroy +1
++1 thru 17</td>
+      <td>Jon Rahm(W) +2
++2 (F)</td>
+      <td>Xander Schauffele +2
++2 (F)</td>
+      <td class="greyout leftborder">Jordan Spieth +2
++2 (F)</td>
+      <td class="greyout">Justin Thomas +4
++4 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Kash Ahmad</td>
+      <td class="bigbold">3</td>
+      <td>Will Zalatoris -1
+-1 (F)</td>
+      <td>Viktor Hovland E
+E (F)</td>
+      <td>Jon Rahm(W) +2
++2 (F)</td>
+      <td>Brooks Koepka +2
++2 thru 17</td>
+      <td class="greyout leftborder">Jordan Spieth +2
++2 (F)</td>
+      <td class="greyout">Justin Thomas +4
++4 (F)</td>
+    </tr>
+    <tr>
       <td class="bigbold">Hasbulla</td>
       <td class="bigbold">3</td>
       <td>Patrick Cantlay(W) -2
@@ -1037,51 +1037,19 @@ E (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Jeff Turnham</td>
-      <td class="bigbold">4</td>
+      <td class="bigbold">5</td>
       <td>Viktor Hovland(W) E
 E (F)</td>
       <td>Collin Morikawa +1
 +1 (F)</td>
-      <td>Jordan Spieth +1
-+1 thru 17</td>
-      <td>Brooks Koepka +2
-+2 thru 17</td>
-      <td class="greyout leftborder">Jon Rahm +2
-+2 (F)</td>
-      <td class="greyout">Patrick Reed +2
-+2 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Yellow in Augusta</td>
-      <td class="bigbold">5</td>
-      <td>Viktor Hovland E
-E (F)</td>
-      <td>Jordan Spieth +1
-+1 thru 17</td>
       <td>Brooks Koepka +2
 +2 thru 17</td>
       <td>Jon Rahm +2
 +2 (F)</td>
-      <td class="greyout leftborder">Xander Schauffele +2
+      <td class="greyout leftborder">Patrick Reed +2
 +2 (F)</td>
-      <td class="greyout">Justin Thomas(W) +4
-+4 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Bryan Francis</td>
-      <td class="bigbold">5</td>
-      <td>Viktor Hovland E
-E (F)</td>
-      <td>Jordan Spieth +1
-+1 thru 17</td>
-      <td>Jon Rahm +2
+      <td class="greyout">Jordan Spieth +2
 +2 (F)</td>
-      <td>Xander Schauffele +2
-+2 (F)</td>
-      <td class="greyout leftborder">Justin Thomas(W) +4
-+4 (F)</td>
-      <td class="greyout">Louis Oosthuizen +4
-+4 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Tony Muir</td>
@@ -1097,6 +1065,38 @@ E (F)</td>
       <td class="greyout leftborder">Louis Oosthuizen +4
 +4 (F)</td>
       <td class="greyout">Justin Thomas +4
++4 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Yellow in Augusta</td>
+      <td class="bigbold">6</td>
+      <td>Viktor Hovland E
+E (F)</td>
+      <td>Brooks Koepka +2
++2 thru 17</td>
+      <td>Jon Rahm +2
++2 (F)</td>
+      <td>Xander Schauffele +2
++2 (F)</td>
+      <td class="greyout leftborder">Jordan Spieth +2
++2 (F)</td>
+      <td class="greyout">Justin Thomas(W) +4
++4 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Bryan Francis</td>
+      <td class="bigbold">6</td>
+      <td>Viktor Hovland E
+E (F)</td>
+      <td>Jon Rahm +2
++2 (F)</td>
+      <td>Xander Schauffele +2
++2 (F)</td>
+      <td>Jordan Spieth +2
++2 (F)</td>
+      <td class="greyout leftborder">Justin Thomas(W) +4
++4 (F)</td>
+      <td class="greyout">Louis Oosthuizen +4
 +4 (F)</td>
     </tr>
   </tbody>
