--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 7:46:08 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 7:46:51 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -141,16 +141,16 @@ body {
   <tbody>
     <tr>
       <td class="bigbold">Larry Judge</td>
-      <td class="bigbold">-8</td>
+      <td class="bigbold">-7</td>
       <td>Cameron Smith -4
 -4 (F)</td>
       <td>Scottie Scheffler(W) -3
 -3 (F)</td>
       <td>Corey Conners -2
 -2 (F)</td>
-      <td>Jordan Spieth +1
-+1 thru 17</td>
-      <td class="greyout leftborder">Xander Schauffele +2
+      <td>Xander Schauffele +2
++2 (F)</td>
+      <td class="greyout leftborder">Jordan Spieth +2
 +2 (F)</td>
       <td class="greyout">Sam Burns +3
 +3 (F)</td>
@@ -204,22 +204,6 @@ E (F)</td>
 +4 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Neil Hardy</td>
-      <td class="bigbold">-5</td>
-      <td>Cameron Smith(W) -4
--4 (F)</td>
-      <td>Corey Conners -2
--2 (F)</td>
-      <td>Viktor Hovland E
-E (F)</td>
-      <td>Jordan Spieth +1
-+1 thru 17</td>
-      <td class="greyout leftborder">Xander Schauffele +2
-+2 (F)</td>
-      <td class="greyout">Justin Thomas +4
-+4 (F)</td>
-    </tr>
-    <tr>
       <td class="bigbold">John Nixon</td>
       <td class="bigbold">-4</td>
       <td>Cameron Smith(W) -4
@@ -252,20 +236,20 @@ E thru 17</td>
 +4 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Matt Tummon</td>
+      <td class="bigbold">Neil Hardy</td>
       <td class="bigbold">-4</td>
-      <td>Dustin Johnson -3
--3 (F)</td>
-      <td>Patrick Cantlay -2
+      <td>Cameron Smith(W) -4
+-4 (F)</td>
+      <td>Corey Conners -2
 -2 (F)</td>
       <td>Viktor Hovland E
 E (F)</td>
-      <td>Jordan Spieth(W) +1
-+1 thru 17</td>
-      <td class="greyout leftborder">Brooks Koepka +2
-+2 thru 17</td>
-      <td class="greyout">Jon Rahm +2
+      <td>Xander Schauffele +2
 +2 (F)</td>
+      <td class="greyout leftborder">Jordan Spieth +2
++2 (F)</td>
+      <td class="greyout">Justin Thomas +4
++4 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Derrick Shea</td>
@@ -284,6 +268,22 @@ E (F)</td>
 +4 (F)</td>
     </tr>
     <tr>
+      <td class="bigbold">Matt Tummon</td>
+      <td class="bigbold">-3</td>
+      <td>Dustin Johnson -3
+-3 (F)</td>
+      <td>Patrick Cantlay -2
+-2 (F)</td>
+      <td>Viktor Hovland E
+E (F)</td>
+      <td>Jordan Spieth(W) +2
++2 (F)</td>
+      <td class="greyout leftborder">Brooks Koepka +2
++2 thru 17</td>
+      <td class="greyout">Jon Rahm +2
++2 (F)</td>
+    </tr>
+    <tr>
       <td class="bigbold">Jamie Watters</td>
       <td class="bigbold">-2</td>
       <td>Dustin Johnson -3
@@ -298,22 +298,6 @@ E (F)</td>
 +4 (F)</td>
       <td class="greyout">Louis Oosthuizen +4
 +4 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Chris Bryson</td>
-      <td class="bigbold">-2</td>
-      <td>Scottie Scheffler(W) -3
--3 (F)</td>
-      <td>Will Zalatoris -1
--1 (F)</td>
-      <td>Jordan Spieth +1
-+1 thru 17</td>
-      <td>Shane Lowry +1
-+1 (F)</td>
-      <td class="greyout leftborder">Jon Rahm +2
-+2 (F)</td>
-      <td class="greyout">Brooks Koepka +2
-+2 thru 17</td>
     </tr>
     <tr>
       <td class="bigbold">Al Shulman</td>
@@ -332,20 +316,20 @@ E (F)</td>
 +4 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Shane Tummon</td>
+      <td class="bigbold">Chris Bryson</td>
       <td class="bigbold">-1</td>
-      <td>Patrick Cantlay -2
--2 (F)</td>
-      <td>Tony Finau -1
+      <td>Scottie Scheffler(W) -3
+-3 (F)</td>
+      <td>Will Zalatoris -1
 -1 (F)</td>
-      <td>Collin Morikawa +1
+      <td>Shane Lowry +1
 +1 (F)</td>
-      <td>Jordan Spieth +1
-+1 thru 17</td>
-      <td class="greyout leftborder">Jon Rahm(W) +2
+      <td>Jon Rahm +2
 +2 (F)</td>
-      <td class="greyout">Brooks Koepka +2
+      <td class="greyout leftborder">Brooks Koepka +2
 +2 thru 17</td>
+      <td class="greyout">Jordan Spieth +2
++2 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Sinclair</td>
@@ -356,23 +340,39 @@ E (F)</td>
 -1 (F)</td>
       <td>Collin Morikawa +1
 +1 (F)</td>
-      <td>Jordan Spieth +1
-+1 thru 17</td>
-      <td class="greyout leftborder">Robert MacIntyre +1
+      <td>Robert MacIntyre +1
 +1 (F)</td>
-      <td class="greyout">Jon Rahm +2
+      <td class="greyout leftborder">Jon Rahm +2
++2 (F)</td>
+      <td class="greyout">Jordan Spieth +2
 +2 (F)</td>
     </tr>
     <tr>
+      <td class="bigbold">Shane Tummon</td>
+      <td class="bigbold">0</td>
+      <td>Patrick Cantlay -2
+-2 (F)</td>
+      <td>Tony Finau -1
+-1 (F)</td>
+      <td>Collin Morikawa +1
++1 (F)</td>
+      <td>Jon Rahm(W) +2
++2 (F)</td>
+      <td class="greyout leftborder">Jordan Spieth +2
++2 (F)</td>
+      <td class="greyout">Brooks Koepka +2
++2 thru 17</td>
+    </tr>
+    <tr>
       <td class="bigbold">Adam Ryan</td>
-      <td class="bigbold">3</td>
+      <td class="bigbold">4</td>
       <td>Corey Conners -2
 -2 (F)</td>
-      <td>Jordan Spieth +1
-+1 thru 17</td>
       <td>Jon Rahm +2
 +2 (F)</td>
       <td>Xander Schauffele +2
++2 (F)</td>
+      <td>Jordan Spieth +2
 +2 (F)</td>
       <td class="greyout leftborder">Justin Thomas(W) +4
 +4 (F)</td>
