--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 7:53:19 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 7:54:02 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -185,6 +185,22 @@ body {
       <td class="greyout leftborder">Viktor Hovland E
 E (F)</td>
       <td class="greyout">Xander Schauffele(W) +2
++2 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">The Dub</td>
+      <td class="bigbold">-10</td>
+      <td>Cameron Smith(W) -4
+-4 (F)</td>
+      <td>Scottie Scheffler -3
+-3 (F)</td>
+      <td>Patrick Cantlay -2
+-2 (F)</td>
+      <td>Matthew Fitzpatrick -1
+-1 (F)</td>
+      <td class="greyout leftborder">Brooks Koepka +2
++2 thru 17</td>
+      <td class="greyout">Xander Schauffele +2
 +2 (F)</td>
     </tr>
     <tr>
@@ -250,22 +266,6 @@ E (F)</td>
 +1 (F)</td>
       <td class="greyout">Brooks Koepka +2
 +2 thru 17</td>
-    </tr>
-    <tr>
-      <td class="bigbold">The Dub</td>
-      <td class="bigbold">-9</td>
-      <td>Cameron Smith(W) -4
--4 (F)</td>
-      <td>Scottie Scheffler -3
--3 (F)</td>
-      <td>Patrick Cantlay -2
--2 (F)</td>
-      <td>Matthew Fitzpatrick E
-E thru 17</td>
-      <td class="greyout leftborder">Brooks Koepka +2
-+2 thru 17</td>
-      <td class="greyout">Xander Schauffele +2
-+2 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Doug Muir</td>
@@ -492,6 +492,22 @@ E (F)</td>
 +4 (F)</td>
     </tr>
     <tr>
+      <td class="bigbold">Andrew Winchester</td>
+      <td class="bigbold">-5</td>
+      <td>Cameron Smith -4
+-4 (F)</td>
+      <td>Matthew Fitzpatrick -1
+-1 (F)</td>
+      <td>Will Zalatoris -1
+-1 (F)</td>
+      <td>Shane Lowry +1
++1 (F)</td>
+      <td class="greyout leftborder">Brooks Koepka +2
++2 thru 17</td>
+      <td class="greyout">Justin Thomas(W) +4
++4 (F)</td>
+    </tr>
+    <tr>
       <td class="bigbold">Baggy Pants</td>
       <td class="bigbold">-5</td>
       <td>Cameron Smith -4
@@ -572,19 +588,19 @@ E (F)</td>
 +4 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Andrew Winchester</td>
+      <td class="bigbold">Wild Billy Mitchell</td>
       <td class="bigbold">-4</td>
-      <td>Cameron Smith -4
--4 (F)</td>
-      <td>Will Zalatoris -1
+      <td>Dustin Johnson(W) -3
+-3 (F)</td>
+      <td>Tony Finau -1
 -1 (F)</td>
-      <td>Matthew Fitzpatrick E
-E thru 17</td>
+      <td>Matthew Fitzpatrick -1
+-1 (F)</td>
       <td>Shane Lowry +1
 +1 (F)</td>
-      <td class="greyout leftborder">Brooks Koepka +2
-+2 thru 17</td>
-      <td class="greyout">Justin Thomas(W) +4
+      <td class="greyout leftborder">Jordan Spieth +2
++2 (F)</td>
+      <td class="greyout">Louis Oosthuizen +4
 +4 (F)</td>
     </tr>
     <tr>
@@ -634,22 +650,6 @@ E (F)</td>
 +2 (F)</td>
       <td class="greyout">Sam Burns +3
 +3 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Wild Billy Mitchell</td>
-      <td class="bigbold">-3</td>
-      <td>Dustin Johnson(W) -3
--3 (F)</td>
-      <td>Tony Finau -1
--1 (F)</td>
-      <td>Matthew Fitzpatrick E
-E thru 17</td>
-      <td>Shane Lowry +1
-+1 (F)</td>
-      <td class="greyout leftborder">Jordan Spieth +2
-+2 (F)</td>
-      <td class="greyout">Louis Oosthuizen +4
-+4 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Tummon</td>
