--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 7:53:19 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 7:54:02 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -204,6 +204,22 @@ E (F)</td>
 +4 (F)</td>
     </tr>
     <tr>
+      <td class="bigbold">Andrew Winchester</td>
+      <td class="bigbold">-5</td>
+      <td>Cameron Smith -4
+-4 (F)</td>
+      <td>Matthew Fitzpatrick -1
+-1 (F)</td>
+      <td>Will Zalatoris -1
+-1 (F)</td>
+      <td>Shane Lowry +1
++1 (F)</td>
+      <td class="greyout leftborder">Brooks Koepka +2
++2 thru 17</td>
+      <td class="greyout">Justin Thomas(W) +4
++4 (F)</td>
+    </tr>
+    <tr>
       <td class="bigbold">John Nixon</td>
       <td class="bigbold">-4</td>
       <td>Cameron Smith(W) -4
@@ -218,22 +234,6 @@ E (F)</td>
 +2 thru 17</td>
       <td class="greyout">Xander Schauffele +2
 +2 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Andrew Winchester</td>
-      <td class="bigbold">-4</td>
-      <td>Cameron Smith -4
--4 (F)</td>
-      <td>Will Zalatoris -1
--1 (F)</td>
-      <td>Matthew Fitzpatrick E
-E thru 17</td>
-      <td>Shane Lowry +1
-+1 (F)</td>
-      <td class="greyout leftborder">Brooks Koepka +2
-+2 thru 17</td>
-      <td class="greyout">Justin Thomas(W) +4
-+4 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Neil Hardy</td>
