--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 6:58:39 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 6:59:22 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -143,257 +143,257 @@ body {
       <td class="bigbold">Larry Judge</td>
       <td class="bigbold">-7</td>
       <td>Cameron Smith -4
--4 (F)</td>
+Not started</td>
       <td>Scottie Scheffler(W) -3
--3 (F)</td>
+Not started</td>
       <td>Corey Conners -2
--2 (F)</td>
+Not started</td>
       <td>Xander Schauffele +2
-+2 (F)</td>
+Not started</td>
       <td class="greyout leftborder">Jordan Spieth +2
-+2 (F)</td>
+Not started</td>
       <td class="greyout">Sam Burns +3
-+3 (F)</td>
+Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Jon Hosegood</td>
       <td class="bigbold">-7</td>
       <td>Scottie Scheffler -3
--3 (F)</td>
+Not started</td>
       <td>Patrick Cantlay -2
--2 (F)</td>
+Not started</td>
       <td>Will Zalatoris -1
--1 (F)</td>
+Not started</td>
       <td>Tony Finau -1
--1 (F)</td>
+Not started</td>
       <td class="greyout leftborder">Shane Lowry +1
-+1 (F)</td>
+Not started</td>
       <td class="greyout">Justin Thomas(W) +4
-+4 (F)</td>
+Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Scott Williamson</td>
       <td class="bigbold">-6</td>
       <td>Sungjae Im -5
--5 (F)</td>
+Not started</td>
       <td>Patrick Cantlay -2
--2 (F)</td>
+Not started</td>
       <td>Viktor Hovland(W) E
-E (F)</td>
+Not started</td>
       <td>Collin Morikawa +1
-+1 (F)</td>
+Not started</td>
       <td class="greyout leftborder">Brooks Koepka +3
-+3 (F)</td>
+Not started</td>
       <td class="greyout">Justin Thomas +4
-+4 (F)</td>
+Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Paxton Watson</td>
       <td class="bigbold">-6</td>
       <td>Cameron Smith -4
--4 (F)</td>
+Not started</td>
       <td>Joaquin Niemann -3
--3 (F)</td>
+Not started</td>
       <td>Viktor Hovland E
-E (F)</td>
+Not started</td>
       <td>Rory McIlroy +1
-+1 (F)</td>
+Not started</td>
       <td class="greyout leftborder">Tommy Fleetwood(W) +3
-+3 (F)</td>
+Not started</td>
       <td class="greyout">Justin Thomas +4
-+4 (F)</td>
+Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Andrew Winchester</td>
       <td class="bigbold">-5</td>
       <td>Cameron Smith -4
--4 (F)</td>
+Not started</td>
       <td>Matthew Fitzpatrick -1
--1 (F)</td>
+Not started</td>
       <td>Will Zalatoris -1
--1 (F)</td>
+Not started</td>
       <td>Shane Lowry +1
-+1 (F)</td>
+Not started</td>
       <td class="greyout leftborder">Brooks Koepka +3
-+3 (F)</td>
+Not started</td>
       <td class="greyout">Justin Thomas(W) +4
-+4 (F)</td>
+Not started</td>
     </tr>
     <tr>
       <td class="bigbold">John Nixon</td>
       <td class="bigbold">-4</td>
       <td>Cameron Smith(W) -4
--4 (F)</td>
+Not started</td>
       <td>Patrick Cantlay -2
--2 (F)</td>
+Not started</td>
       <td>Collin Morikawa +1
-+1 (F)</td>
+Not started</td>
       <td>Rory McIlroy +1
-+1 (F)</td>
+Not started</td>
       <td class="greyout leftborder">Xander Schauffele +2
-+2 (F)</td>
+Not started</td>
       <td class="greyout">Brooks Koepka +3
-+3 (F)</td>
+Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Neil Hardy</td>
       <td class="bigbold">-4</td>
       <td>Cameron Smith(W) -4
--4 (F)</td>
+Not started</td>
       <td>Corey Conners -2
--2 (F)</td>
+Not started</td>
       <td>Viktor Hovland E
-E (F)</td>
+Not started</td>
       <td>Xander Schauffele +2
-+2 (F)</td>
+Not started</td>
       <td class="greyout leftborder">Jordan Spieth +2
-+2 (F)</td>
+Not started</td>
       <td class="greyout">Justin Thomas +4
-+4 (F)</td>
+Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Derrick Shea</td>
       <td class="bigbold">-3</td>
       <td>Patrick Cantlay -2
--2 (F)</td>
+Not started</td>
       <td>Corey Conners -2
--2 (F)</td>
+Not started</td>
       <td>Tyrrell Hatton E
-E (F)</td>
+Not started</td>
       <td>Shane Lowry +1
-+1 (F)</td>
+Not started</td>
       <td class="greyout leftborder">Jon Rahm +2
-+2 (F)</td>
+Not started</td>
       <td class="greyout">Justin Thomas(W) +4
-+4 (F)</td>
+Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Tummon</td>
       <td class="bigbold">-3</td>
       <td>Dustin Johnson -3
--3 (F)</td>
+Not started</td>
       <td>Patrick Cantlay -2
--2 (F)</td>
+Not started</td>
       <td>Viktor Hovland E
-E (F)</td>
+Not started</td>
       <td>Jordan Spieth(W) +2
-+2 (F)</td>
+Not started</td>
       <td class="greyout leftborder">Jon Rahm +2
-+2 (F)</td>
+Not started</td>
       <td class="greyout">Brooks Koepka +3
-+3 (F)</td>
+Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Jamie Watters</td>
       <td class="bigbold">-2</td>
       <td>Dustin Johnson -3
--3 (F)</td>
+Not started</td>
       <td>Corey Conners -2
--2 (F)</td>
+Not started</td>
       <td>Russell Henley +1
-+1 (F)</td>
+Not started</td>
       <td>Xander Schauffele(W) +2
-+2 (F)</td>
+Not started</td>
       <td class="greyout leftborder">Justin Thomas +4
-+4 (F)</td>
+Not started</td>
       <td class="greyout">Louis Oosthuizen +4
-+4 (F)</td>
+Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Al Shulman</td>
       <td class="bigbold">-2</td>
       <td>Will Zalatoris -1
--1 (F)</td>
+Not started</td>
       <td>Tony Finau -1
--1 (F)</td>
+Not started</td>
       <td>Daniel Berger -1
--1 (F)</td>
+Not started</td>
       <td>Collin Morikawa +1
-+1 (F)</td>
+Not started</td>
       <td class="greyout leftborder">Brooks Koepka +3
-+3 (F)</td>
+Not started</td>
       <td class="greyout">Justin Thomas(W) +4
-+4 (F)</td>
+Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Bryson</td>
       <td class="bigbold">-1</td>
       <td>Scottie Scheffler(W) -3
--3 (F)</td>
+Not started</td>
       <td>Will Zalatoris -1
--1 (F)</td>
+Not started</td>
       <td>Shane Lowry +1
-+1 (F)</td>
+Not started</td>
       <td>Jon Rahm +2
-+2 (F)</td>
+Not started</td>
       <td class="greyout leftborder">Jordan Spieth +2
-+2 (F)</td>
+Not started</td>
       <td class="greyout">Brooks Koepka +3
-+3 (F)</td>
+Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Sinclair</td>
       <td class="bigbold">-1</td>
       <td>Corey Conners(W) -2
--2 (F)</td>
+Not started</td>
       <td>Daniel Berger -1
--1 (F)</td>
+Not started</td>
       <td>Collin Morikawa +1
-+1 (F)</td>
+Not started</td>
       <td>Robert MacIntyre +1
-+1 (F)</td>
+Not started</td>
       <td class="greyout leftborder">Jon Rahm +2
-+2 (F)</td>
+Not started</td>
       <td class="greyout">Jordan Spieth +2
-+2 (F)</td>
+Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Tummon</td>
       <td class="bigbold">0</td>
       <td>Patrick Cantlay -2
--2 (F)</td>
+Not started</td>
       <td>Tony Finau -1
--1 (F)</td>
+Not started</td>
       <td>Collin Morikawa +1
-+1 (F)</td>
+Not started</td>
       <td>Jon Rahm(W) +2
-+2 (F)</td>
+Not started</td>
       <td class="greyout leftborder">Jordan Spieth +2
-+2 (F)</td>
+Not started</td>
       <td class="greyout">Brooks Koepka +3
-+3 (F)</td>
+Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Adam Ryan</td>
       <td class="bigbold">4</td>
       <td>Corey Conners -2
--2 (F)</td>
+Not started</td>
       <td>Jon Rahm +2
-+2 (F)</td>
+Not started</td>
       <td>Xander Schauffele +2
-+2 (F)</td>
+Not started</td>
       <td>Jordan Spieth +2
-+2 (F)</td>
+Not started</td>
       <td class="greyout leftborder">Justin Thomas(W) +4
-+4 (F)</td>
+Not started</td>
       <td class="greyout">Louis Oosthuizen +4
-+4 (F)</td>
+Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Jeff Turnham</td>
       <td class="bigbold">5</td>
       <td>Viktor Hovland(W) E
-E (F)</td>
+Not started</td>
       <td>Collin Morikawa +1
-+1 (F)</td>
+Not started</td>
       <td>Jon Rahm +2
-+2 (F)</td>
+Not started</td>
       <td>Patrick Reed +2
-+2 (F)</td>
+Not started</td>
       <td class="greyout leftborder">Brooks Koepka +3
-+3 (F)</td>
+Not started</td>
       <td class="greyout">Luke List +5
-+5 (F)</td>
+Not started</td>
     </tr>
   </tbody>
 </table>
