--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 8:50:40 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 8:51:23 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -341,7 +341,7 @@ Not started</td>
       <td>Collin Morikawa +1
 Not started</td>
       <td>Robert MacIntyre +1
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Jon Rahm +2
 Not started</td>
       <td class="greyout">Jordan Spieth +2
