--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 9:05:44 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 9:06:27 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -902,10 +902,10 @@ Not started</td>
 Not started</td>
       <td>Rory McIlroy +1
 Not started</td>
-      <td class="greyout leftborder">Gary Woodland +3
+      <td class="greyout leftborder">Justin Thomas +4
 Not started</td>
-      <td class="greyout">Justin Thomas +4
-Not started</td>
+      <td class="greyout">Gary Woodland +5
++2 thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Wylie</td>
