--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 9:06:27 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 9:07:10 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -952,8 +952,8 @@ Not started</td>
 Not started</td>
       <td class="greyout leftborder">Justin Thomas(W) +4
 Not started</td>
-      <td class="greyout">Justin Rose +4
-Not started</td>
+      <td class="greyout">Justin Rose +5
++1 thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Glen Wilson</td>
