--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 9:16:30 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 9:17:13 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -149,7 +149,7 @@ Not started</td>
       <td>Patrick Cantlay -2
 Not started</td>
       <td>Corey Conners -2
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Shane Lowry +1
 Not started</td>
       <td class="greyout">Louis Oosthuizen +4
@@ -163,11 +163,11 @@ Not started</td>
       <td>Scottie Scheffler -3
 Not started</td>
       <td>Corey Conners -2
-Not started</td>
+E thru 1</td>
       <td>Will Zalatoris -1
 Not started</td>
-      <td class="greyout leftborder">Russell Henley +1
-Not started</td>
+      <td class="greyout leftborder">Russell Henley +3
++2 thru 1</td>
       <td class="greyout">Brooks Koepka +3
 Not started</td>
     </tr>
@@ -179,7 +179,7 @@ Not started</td>
       <td>Scottie Scheffler -3
 Not started</td>
       <td>Corey Conners -2
-Not started</td>
+E thru 1</td>
       <td>Will Zalatoris -1
 Not started</td>
       <td class="greyout leftborder">Viktor Hovland E
@@ -211,7 +211,7 @@ Not started</td>
       <td>Patrick Cantlay -2
 Not started</td>
       <td>Corey Conners -2
-Not started</td>
+E thru 1</td>
       <td>Will Zalatoris -1
 Not started</td>
       <td class="greyout leftborder">Viktor Hovland E
@@ -227,7 +227,7 @@ Not started</td>
       <td>Scottie Scheffler -3
 Not started</td>
       <td>Corey Conners -2
-Not started</td>
+E thru 1</td>
       <td>Viktor Hovland(W) E
 Not started</td>
       <td class="greyout leftborder">Tyrrell Hatton E
@@ -243,7 +243,7 @@ Not started</td>
       <td>Scottie Scheffler -3
 Not started</td>
       <td>Corey Conners -2
-Not started</td>
+E thru 1</td>
       <td>Talor Gooch E
 Not started</td>
       <td class="greyout leftborder">Xander Schauffele +2
@@ -305,7 +305,7 @@ Not started</td>
       <td>Scottie Scheffler -3
 Not started</td>
       <td>Corey Conners -2
-Not started</td>
+E thru 1</td>
       <td>Webb Simpson -1
 Not started</td>
       <td>Will Zalatoris -1
@@ -323,7 +323,7 @@ Not started</td>
       <td>Patrick Cantlay(W) -2
 Not started</td>
       <td>Corey Conners -2
-Not started</td>
+E thru 1</td>
       <td>Viktor Hovland E
 Not started</td>
       <td class="greyout leftborder">Jon Rahm +2
@@ -387,7 +387,7 @@ Not started</td>
       <td>Patrick Cantlay -2
 Not started</td>
       <td>Corey Conners -2
-Not started</td>
+E thru 1</td>
       <td>Rory McIlroy +1
 Not started</td>
       <td class="greyout leftborder">Robert MacIntyre +2
@@ -401,7 +401,7 @@ Not started</td>
       <td>Cameron Smith(W) -4
 Not started</td>
       <td>Corey Conners -2
-Not started</td>
+E thru 1</td>
       <td>Viktor Hovland E
 Not started</td>
       <td>Hideki Matsuyama E
@@ -417,7 +417,7 @@ Not started</td>
       <td>Cameron Smith -4
 Not started</td>
       <td>Corey Conners -2
-Not started</td>
+E thru 1</td>
       <td>Talor Gooch E
 Not started</td>
       <td>Hideki Matsuyama E
@@ -433,7 +433,7 @@ Not started</td>
       <td>Cameron Smith -4
 Not started</td>
       <td>Corey Conners -2
-Not started</td>
+E thru 1</td>
       <td>Tiger Woods -1
 Not started</td>
       <td>Jon Rahm(W) +2
@@ -449,7 +449,7 @@ Not started</td>
       <td>Cameron Smith -4
 Not started</td>
       <td>Corey Conners(W) -2
-Not started</td>
+E thru 1</td>
       <td>Will Zalatoris -1
 Not started</td>
       <td>Jon Rahm +2
@@ -481,7 +481,7 @@ Not started</td>
       <td>Cameron Smith(W) -4
 Not started</td>
       <td>Corey Conners -2
-Not started</td>
+E thru 1</td>
       <td>Hideki Matsuyama E
 Not started</td>
       <td>Marc Leishman +1
@@ -561,7 +561,7 @@ Not started</td>
       <td>Scottie Scheffler(W) -3
 Not started</td>
       <td>Corey Conners -2
-Not started</td>
+E thru 1</td>
       <td>Will Zalatoris -1
 Not started</td>
       <td>Jon Rahm +2
@@ -577,7 +577,7 @@ Not started</td>
       <td>Cameron Smith(W) -4
 Not started</td>
       <td>Corey Conners -2
-Not started</td>
+E thru 1</td>
       <td>Viktor Hovland E
 Not started</td>
       <td>Xander Schauffele +2
@@ -625,7 +625,7 @@ Not started</td>
       <td>Joaquin Niemann -3
 Not started</td>
       <td>Corey Conners -2
-Not started</td>
+E thru 1</td>
       <td>Viktor Hovland E
 Not started</td>
       <td>Shane Lowry(W) +1
@@ -687,7 +687,7 @@ Not started</td>
       <td class="bigbold">Grace</td>
       <td class="bigbold">-2</td>
       <td>Corey Conners -2
-Not started</td>
+E thru 1</td>
       <td>Will Zalatoris -1
 Not started</td>
       <td>Viktor Hovland E
@@ -721,7 +721,7 @@ Not started</td>
       <td>Scottie Scheffler -3
 Not started</td>
       <td>Corey Conners -2
-Not started</td>
+E thru 1</td>
       <td>Shane Lowry +1
 Not started</td>
       <td>Jordan Spieth +2
@@ -799,7 +799,7 @@ Not started</td>
       <td class="bigbold">Chris Sinclair</td>
       <td class="bigbold">0</td>
       <td>Corey Conners(W) -2
-Not started</td>
+E thru 1</td>
       <td>Daniel Berger -1
 Not started</td>
       <td>Collin Morikawa +1
@@ -815,7 +815,7 @@ Not started</td>
       <td class="bigbold">Jabby</td>
       <td class="bigbold">0</td>
       <td>Corey Conners -2
-Not started</td>
+E thru 1</td>
       <td>Will Zalatoris -1
 Not started</td>
       <td>Rory McIlroy +1
@@ -991,7 +991,7 @@ Not started</td>
       <td class="bigbold">Brian McDonald</td>
       <td class="bigbold">3</td>
       <td>Corey Conners -2
-Not started</td>
+E thru 1</td>
       <td>Rory McIlroy +1
 Not started</td>
       <td>Jon Rahm(W) +2
