--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 9:16:30 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 9:17:13 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -147,7 +147,7 @@ Not started</td>
       <td>Scottie Scheffler(W) -3
 Not started</td>
       <td>Corey Conners -2
-Not started</td>
+E thru 1</td>
       <td>Xander Schauffele +2
 Not started</td>
       <td class="greyout leftborder">Jordan Spieth +2
@@ -241,7 +241,7 @@ Not started</td>
       <td>Cameron Smith(W) -4
 Not started</td>
       <td>Corey Conners -2
-Not started</td>
+E thru 1</td>
       <td>Viktor Hovland E
 Not started</td>
       <td>Xander Schauffele +2
@@ -257,7 +257,7 @@ Not started</td>
       <td>Patrick Cantlay -2
 Not started</td>
       <td>Corey Conners -2
-Not started</td>
+E thru 1</td>
       <td>Tyrrell Hatton E
 Not started</td>
       <td>Shane Lowry +1
@@ -281,22 +281,6 @@ Not started</td>
       <td class="greyout leftborder">Jon Rahm +2
 Not started</td>
       <td class="greyout">Brooks Koepka +3
-Not started</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Jamie Watters</td>
-      <td class="bigbold">-2</td>
-      <td>Dustin Johnson -3
-Not started</td>
-      <td>Corey Conners -2
-Not started</td>
-      <td>Russell Henley +1
-Not started</td>
-      <td>Xander Schauffele(W) +2
-Not started</td>
-      <td class="greyout leftborder">Justin Thomas +4
-Not started</td>
-      <td class="greyout">Louis Oosthuizen +4
 Not started</td>
     </tr>
     <tr>
@@ -332,6 +316,22 @@ Not started</td>
 Not started</td>
     </tr>
     <tr>
+      <td class="bigbold">Jamie Watters</td>
+      <td class="bigbold">0</td>
+      <td>Dustin Johnson -3
+Not started</td>
+      <td>Corey Conners -2
+E thru 1</td>
+      <td>Xander Schauffele(W) +2
+Not started</td>
+      <td>Russell Henley +3
++2 thru 1</td>
+      <td class="greyout leftborder">Justin Thomas +4
+Not started</td>
+      <td class="greyout">Louis Oosthuizen +4
+Not started</td>
+    </tr>
+    <tr>
       <td class="bigbold">Shane Tummon</td>
       <td class="bigbold">0</td>
       <td>Patrick Cantlay -2
@@ -351,7 +351,7 @@ Not started</td>
       <td class="bigbold">Chris Sinclair</td>
       <td class="bigbold">0</td>
       <td>Corey Conners(W) -2
-Not started</td>
+E thru 1</td>
       <td>Daniel Berger -1
 Not started</td>
       <td>Collin Morikawa +1
@@ -367,7 +367,7 @@ Not started</td>
       <td class="bigbold">Adam Ryan</td>
       <td class="bigbold">4</td>
       <td>Corey Conners -2
-Not started</td>
+E thru 1</td>
       <td>Jon Rahm +2
 Not started</td>
       <td>Xander Schauffele +2
