--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 9:26:32 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 9:27:15 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -1045,7 +1045,7 @@ Not started</td>
       <td>Jon Rahm +2
 Not started</td>
       <td>Patrick Reed +2
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Jordan Spieth +2
 Not started</td>
       <td class="greyout">Brooks Koepka +3
