--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 9:36:36 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 9:37:19 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -725,7 +725,7 @@ Not started</td>
       <td>Rory McIlroy +1
 Not started</td>
       <td>Bubba Watson +1
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Jon Rahm(W) +2
 Not started</td>
       <td class="greyout">Jordan Spieth +2
