--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 9:53:10 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 9:53:53 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -469,7 +469,7 @@ Not started</td>
       <td>Hideki Matsuyama E
 Not started</td>
       <td>Marc Leishman +1
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Xander Schauffele +2
 Not started</td>
       <td class="greyout">Justin Thomas +4
@@ -969,7 +969,7 @@ Not started</td>
       <td class="greyout leftborder">Justin Thomas(W) +4
 Not started</td>
       <td class="greyout">Justin Rose +5
-+1 thru 3</td>
++1 thru 4</td>
     </tr>
     <tr>
       <td class="bigbold">Glen Wilson</td>
