--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 9:56:02 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 9:56:45 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -668,6 +668,22 @@ Not started</td>
 Not started</td>
     </tr>
     <tr>
+      <td class="bigbold">Glitter Girl</td>
+      <td class="bigbold">-3</td>
+      <td>Cameron Smith -4
+Not started</td>
+      <td>Viktor Hovland E
+Not started</td>
+      <td>Bubba Watson E
+-1 thru 2</td>
+      <td>Rory McIlroy +1
+Not started</td>
+      <td class="greyout leftborder">Jon Rahm(W) +2
+Not started</td>
+      <td class="greyout">Jordan Spieth +2
+Not started</td>
+    </tr>
+    <tr>
       <td class="bigbold">Stan and Ollie Garch</td>
       <td class="bigbold">-3</td>
       <td>Corey Conners -3
@@ -713,22 +729,6 @@ Not started</td>
       <td class="greyout leftborder">Jon Rahm +2
 Not started</td>
       <td class="greyout">Xander Schauffele +2
-Not started</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Glitter Girl</td>
-      <td class="bigbold">-2</td>
-      <td>Cameron Smith -4
-Not started</td>
-      <td>Viktor Hovland E
-Not started</td>
-      <td>Rory McIlroy +1
-Not started</td>
-      <td>Bubba Watson +1
-E thru 1</td>
-      <td class="greyout leftborder">Jon Rahm(W) +2
-Not started</td>
-      <td class="greyout">Jordan Spieth +2
 Not started</td>
     </tr>
     <tr>
