--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 10:08:13 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 10:08:56 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -284,22 +284,6 @@ Not started</td>
 Not started</td>
     </tr>
     <tr>
-      <td class="bigbold">Jamie Watters</td>
-      <td class="bigbold">-2</td>
-      <td>Dustin Johnson -3
-Not started</td>
-      <td>Corey Conners -2
-E thru 4</td>
-      <td>Russell Henley +1
-E thru 3</td>
-      <td>Xander Schauffele(W) +2
-Not started</td>
-      <td class="greyout leftborder">Justin Thomas +4
-Not started</td>
-      <td class="greyout">Louis Oosthuizen +4
-Not started</td>
-    </tr>
-    <tr>
       <td class="bigbold">Al Shulman</td>
       <td class="bigbold">-2</td>
       <td>Will Zalatoris -1
@@ -329,6 +313,22 @@ Not started</td>
       <td class="greyout leftborder">Jordan Spieth +2
 Not started</td>
       <td class="greyout">Brooks Koepka +3
+Not started</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Jamie Watters</td>
+      <td class="bigbold">0</td>
+      <td>Dustin Johnson -3
+Not started</td>
+      <td>Corey Conners -2
+E thru 4</td>
+      <td>Xander Schauffele(W) +2
+Not started</td>
+      <td>Russell Henley +3
++2 thru 4</td>
+      <td class="greyout leftborder">Justin Thomas +4
+Not started</td>
+      <td class="greyout">Louis Oosthuizen +4
 Not started</td>
     </tr>
     <tr>
