--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 10:08:13 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 10:08:56 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -166,8 +166,8 @@ Not started</td>
 E thru 4</td>
       <td>Will Zalatoris -1
 Not started</td>
-      <td class="greyout leftborder">Russell Henley +1
-E thru 3</td>
+      <td class="greyout leftborder">Russell Henley +3
++2 thru 4</td>
       <td class="greyout">Brooks Koepka +3
 Not started</td>
     </tr>
