--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 10:11:49 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 10:12:32 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -268,6 +268,22 @@ Not started</td>
 Not started</td>
     </tr>
     <tr>
+      <td class="bigbold">Albert Selina</td>
+      <td class="bigbold">-8</td>
+      <td>Scottie Scheffler -3
+Not started</td>
+      <td>Corey Conners -2
+E thru 4</td>
+      <td>Webb Simpson -2
+-1 thru 2</td>
+      <td>Will Zalatoris -1
+Not started</td>
+      <td class="greyout leftborder">Jon Rahm(W) +2
+Not started</td>
+      <td class="greyout">Xander Schauffele +2
+Not started</td>
+    </tr>
+    <tr>
       <td class="bigbold">Doug Muir</td>
       <td class="bigbold">-8</td>
       <td>Cameron Smith -4
@@ -297,22 +313,6 @@ Not started</td>
       <td class="greyout leftborder">Shane Lowry +1
 Not started</td>
       <td class="greyout">Justin Thomas(W) +4
-Not started</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Albert Selina</td>
-      <td class="bigbold">-7</td>
-      <td>Scottie Scheffler -3
-Not started</td>
-      <td>Corey Conners -2
-E thru 4</td>
-      <td>Webb Simpson -1
-E thru 1</td>
-      <td>Will Zalatoris -1
-Not started</td>
-      <td class="greyout leftborder">Jon Rahm(W) +2
-Not started</td>
-      <td class="greyout">Xander Schauffele +2
 Not started</td>
     </tr>
     <tr>
